// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render avatar with avatar li 1`] = `
<ul
  className="mdc-list mdc-list--avatar-list"
>
  <ListItem
    avatarSrc="http://4vector.com/i/free-vector-george-washington-clip-art_108422_George_Washington_clip_art_hight.png"
    value="George Washington"
  />
  <ListItem
    avatarSrc="https://www.goodfreephotos.com/albums/vector-images/abraham-lincoln-vector-clipart.png"
    value="Abraham Lincoln"
  />
  <ListItem
    avatarSrc="http://png-4.vector.me/files/images/4/4/448988/marco_simoncelli_vector_portrait_thumb.gif"
    value="Marco Simoncelli"
  />
</ul>
`;

exports[`<List /> should render dense with basic li 1`] = `
<ul
  className="mdc-list mdc-list--dense"
>
  <ListItem
    value="Item One"
  />
  <ListItem
    value="Item Two"
  />
  <ListItem
    value="Item Two"
  />
</ul>
`;

exports[`<List /> should render two-line list 1`] = `
<ul
  className="mdc-list mdc-list--two-line"
>
  <ListItem
    secondaryValue="Secondary Value 1"
    value="Item 1"
  />
</ul>
`;

exports[`<List /> should render with basic li 1`] = `
<ul
  className="mdc-list"
>
  <ListItem
    value="Item One"
  />
  <ListItem
    value="Item Two"
  />
  <ListItem
    value="Item Two"
  />
</ul>
`;
